--- a/Dicee/Base.lproj/Main.storyboard
+++ b/Dicee/Base.lproj/Main.storyboard
@@ -38,6 +38,9 @@
                                 <state key="normal" title="Roll">
                                     <color key="titleColor" red="0.99131445520000006" green="0.97135876200000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="rollButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GzB-7W-WxU"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="NIB-dC-OrU">
                                 <rect key="frame" x="200" y="255" width="150" height="150"/>
@@ -47,6 +50,11 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="diceImage1" destination="f6t-Vv-O2Y" id="wLc-DH-XKK"/>
+                        <outlet property="diceImage2" destination="NIB-dC-OrU" id="oFN-wv-Ca5"/>
+                        <outlet property="roleButtonPressed" destination="DIh-2o-1Ma" id="vV3-4x-AlL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
